# src/api/dto/user.go
@@ -1,5 +1,5 @@
 package dto
 
 type GetOtpRequest struct {
-	MobileNumber string `json:"mobileNumber" binding:"required,mobile,min:11,max:11"`
+	MobileNumber string `json:"mobileNumber" binding:"required,mobile,min=11,max=11"`
 }
